post added to env

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+PORT = 5000
 CONNECTION_URL = mongodb+srv://shenith:shenith123@cluster0.ktocb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
